--- a/main.css
+++ b/main.css
@@ -1,3 +1,22 @@
+@font-face {
+ font-family: "Grotesk Regular";
+ src: url("fonts/Founders Grotesk - Regular.otf") format("opentype");
+}
+
+@font-face {
+ font-family: "Grotesk Bold";
+ src: url("fonts/Founders Grotesk - Bold.otf") format("opentype");
+}
+
+@font-face {
+ font-family: "Grotesk Light";
+ src: url("fonts/Founders Grotesk - Light.otf") format("opentype");
+}
+
+body {
+    font-family: "Grotesk Regular"
+}
+
 canvas {
     display: block;
 }
@@ -13,15 +32,63 @@ select {
     z-index: 999;
 }
 
+.home {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 500;
+    transform: translateY(0vh);
+    transition: 0.5s transform ease-out;
+}
+
+.home h1 {
+  font-size: 110px;
+  font-family: "Grotesk Bold";
+  line-height: normal;
+  color: #c0914e;
+}
+
+
+.home h2 {
+  font-size: 1.8rem;
+  font-family: "Grotesk Regular";
+  line-height: normal;
+  color: white;
+  width: 500px;
+  margin: 0 auto;
+}
+
+.home section {
+    padding-top: 20vh;
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+}
+
+
+
 #info {
     background-color: white;
-    border-radius: 50px 50px;
-    padding: 20px 20px;
+    border-radius: 30px;
+    padding: 15px 20px;
+    line-height: normal;
+}
+
+.pays {
+    font-family: 'Grotesk Light';
+    font-size: 1.3rem;
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .conso {
+    font-family: 'Grotesk Bold';
     font-weight: bold;
     text-align: center;
     margin: 0 auto;
     width: 100%;
+    font-size: 1.5rem;
 }
